--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 body {
   margin: 0 auto;
   padding: 0;
-  /* max-width: 1600px; */
+  max-width: 1600px;
   font-family: "Roboto";
   color: var(--text-color);
 }
